--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,13 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+      "a11y": {
+        "noSvgWithoutTitle": "warn"
+      },
+      "nursery": {
+        "useUniqueElementIds": "warn"
+      }
 		}
 	},
 	"javascript": {
